<resources>
    <string name="app_name">Dish Dash</string>
    <string name="dish_dash">Dish Dash</string>
    <string name="slogan">Everything is good when it\'s about food</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="btn_skip">Skip</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registerd?</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="calendar">My Calendar</string>
    <string name="logout">Log Out</string>

    <string name="add_to_favourites">Add To Favourite</string>
    <string name="ingredient_fragment">Ingredient Fragment</string>
    <string name="category_fragment">Category Fragment</string>
    <string name="area_meals_fragment">Area Meals Fragment</string>
    <string name="area_fragment">Area Fragment</string>

    <string name="default_web_client_id">211155314520-4tjbphvgi43o9cu5t3squfq1c6i24hbm.apps.googleusercontent.com</string>
    <string name="facebook_app_id">9747980655294520</string>
    <string name="facebook_client_token">2f5efd3ee8a951b13d1ec2159956e214</string>
    <string name="filtered_meals">Filtered Meals</string>
    <string name="meal_details">Meal Details</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="suggestedMeals">Suggested for You</string>
    <string name="viewByIngredoent">View by Ingredient</string>
    <string name="viewByCategory">View by Category</string>
    <string name="viewByArea">View by Country</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="welcome_guest">Welcome Guest</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="loginRegister">Login/Register</string>
</resources>
