<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.food_planner.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.food_planner.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.food_planner.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite"/>

</navigation>