<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.food_planner.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_mealsFragment"
            app:destination="@id/mealsFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_favourite"
            app:destination="@id/nav_favourite" />
        <action
            android:id="@+id/action_nav_home_to_nav_search"
            app:destination="@id/nav_search" />
        <action
            android:id="@+id/action_nav_home_to_nav_calender"
            app:destination="@id/nav_calender" />
        <action
            android:id="@+id/action_nav_home_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.food_planner.search.view.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_search_to_mealsFragment"
            app:destination="@id/mealsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.food_planner.favourite.view.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_nav_favourite_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_calender"
        android:name="com.example.food_planner.calendar.view.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calender" >
        <action
            android:id="@+id/action_nav_calender_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealsFragment"
        android:name="com.example.food_planner.meals.view.MealsFragment"
        android:label="@string/filtered_meals"
        tools:layout="@layout/fragment_meals" >
        <action
            android:id="@+id/action_mealsFragment_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealDetailsFragment"
        android:name="com.example.food_planner.meal_details.view.MealDetailsFragment"
        android:label="@string/meal_details"
        tools:layout="@layout/fragment_meal_details" />

</navigation>