<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".home.view.HomeFragment">

        <!-- Featured Meal Card -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:strokeColor="#E0E0E0"
            app:strokeWidth="1dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <!-- Meal Image -->
                <ImageView
                    android:id="@+id/mealImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:outlineProvider="background" />

                <!-- Gradient Overlay -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient" />

                <!-- Favorite Icon -->
                <ImageView
                    android:id="@+id/addFavouritesIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="20dp"
                    android:src="@drawable/favourite"
                    android:contentDescription="@string/add_to_favourites"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless" />

                <TextView
                    android:id="@+id/mealName"
                    android:layout_gravity="bottom"
                    android:padding="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Meal Name"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/amita"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amita"
            android:gravity="center"
            android:text="@string/ingredients"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/light_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />


        <!-- Ingredients RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/ingredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/meal_carousel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amita"
            android:gravity="center"
            android:text="@string/instructions"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/light_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerviewIngredients" />

        <TextView
            android:id="@+id/mealInstructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/atma_medium"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="Meal Name"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerviewIngredients" />

        <TextView
            android:id="@+id/youtubeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amita"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="YouTube Video"
            android:textColor="@color/light_red"
            android:textStyle="bold"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mealInstructions" />

        <WebView
            android:id="@+id/youtubeVideo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtubeTitle"
            android:paddingBottom="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
